package com.github.studeasy.dao.couponDAO;

/**
 * Abstract class for the coupon DAO
 * Contains the methods needed by the coupon DAO
 */
public abstract class CouponDAO {
}
