package com.github.studeasy.gui.routers;

/**
 * Router for the coupon routes
 */
public class CouponRouter extends AbstractRouter{
}
